# Whatsapp-LLM

./: .gitignore  k8s-deployment.yaml
whatsapp-core-cpp/: CMakeLists.txt  Dockerfile
whatsapp-core-cpp/config/: app.yaml
whatsapp-core-cpp/include/ingest/: ingest_controller.h
whatsapp-core-cpp/include/llm/: ollama_client.h
whatsapp-core-cpp/include/persistence/: database_pool.h  message_database.h  repository.h
whatsapp-core-cpp/include/rag/: rag_service.h  vector_store.h
whatsapp-core-cpp/src/: main.cpp
whatsapp-core-cpp/src/ingest/: ingest_controller.cpp
whatsapp-core-cpp/src/llm/: ollama_client.cpp
whatsapp-core-cpp/src/persistence/: database_pool.cpp  message_database.cpp  repository.cpp
whatsapp-core-cpp/src/rag/: rag_service.cpp  vector_store.cpp
whatsapp-core-cpp/src/utils/: logger.cpp  logger.h
whatsapp-core-cpp/src/validation/: message_validator.cpp  message_validator.h
whatsapp-gateway-go/: Dockerfile  go.mod  whatsapp.db
whatsapp-gateway-go/cmd/gateway/: main.go  whatsapp.db
whatsapp-gateway-go/internal/config/: config.go
whatsapp-gateway-go/internal/serializer/: message_serializer.go
whatsapp-gateway-go/internal/transport/: http_client.go
whatsapp-gateway-go/store/: whatsapp.db
